# python-package-template

./: .gitignore  COOKIECUTTER-EXPLANATION.md  Makefile  README.md  cookiecutter.json  example_stdin.txt  mkdocs.yml
.github/workflows/: deploy-gh-docs.yml  test.yml
0.1/: 404.html  index.html  requirements.txt  sitemap.xml
0.1/reference/: index.html
0.1/reference/manage-dependencies/: index.html
0.1/search/: search_index.json
0.1/user-guide/: index.html
0.1/user-guide/environments/: index.html
0.1/user-guide/first-init/: index.html
0.1/user-guide/formatters/: index.html
0.1/user-guide/linter/: index.html
0.1/user-guide/linters/: index.html
0.1/user-guide/makefile/: index.html
0.1/user-guide/poetry/: index.html
0.1/user-guide/pre-commit/: index.html
docs/: index.md
docs/reference/: index.md  manage-dependencies.md  vendor.md
docs/stylesheets/: slate.css
docs/user-guide/: environments.md  first-init.md  formatters.md  index.md  linter.md  linters.md  makefile.md  poetry.md
hooks/: post_gen_project.py  pre_gen_project.py
latest/reference/: index.html
latest/reference/manage-dependencies/: index.html
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: cd.yml  ci.yml  gh-pages-docs.yml
{{cookiecutter.project_slug}}/docs/: contributing.md  pyproject.toml
{{cookiecutter.project_slug}}/tests/: test_sum.py
{{cookiecutter.project_slug}}/{{coockiecutter.project_slug}}/: mysum.py
(+8 files in other folders)
