[tool.poetry]
name = "{{cookiecutter.project_slug}}_docs"
version = "0.1.0a0"
description = "Docs for the {{cookiecutter.project_name} project"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^{{cookiecutter.development_python_version}}"
mkdocs-material = "^8.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
